# rns-rs

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  RNSCTL-PLAN.md  UPSTREAM.md
docs/: direct-link-protocol.md  python-feature-gaps.md  wasm-hooks-plan.md
rns-cli/: Cargo.toml
rns-cli/src/: args.rs  format.rs  lib.rs  remote.rs
rns-core/: Cargo.toml
rns-core/src/: announce.rs  constants.rs  destination.rs  hash.rs  lib.rs  msgpack.rs  packet.rs  receipt.rs  stamp.rs  types.rs
rns-core/src/buffer/: mod.rs  types.rs
rns-core/src/channel/: envelope.rs  mod.rs  types.rs
rns-core/src/holepunch/: engine.rs  mod.rs  types.rs
rns-core/src/link/: crypto.rs  handshake.rs  identify.rs  keepalive.rs  mod.rs  types.rs
rns-core/src/resource/: advertisement.rs  mod.rs  parts.rs  proof.rs  receiver.rs  sender.rs  types.rs  window.rs
rns-core/src/transport/: announce_proc.rs  announce_queue.rs  dedup.rs  inbound.rs  ingress_control.rs  jobs.rs  mod.rs  outbound.rs  pathfinder.rs  rate_limit.rs  tables.rs  tunnel.rs  types.rs
rns-core/tests/: interop.rs  link_integration.rs  resource_integration.rs  transport_integration.rs
rns-crypto/: Cargo.toml
rns-crypto/src/: aes.rs  aes128.rs  aes256.rs  bigint.rs  hkdf.rs  hmac.rs  identity.rs  lib.rs  pkcs7.rs  sha256.rs  sha512.rs  token.rs  x25519.rs
rns-crypto/src/ed25519/: basic.rs  eddsa.rs  mod.rs
rns-crypto/tests/: bench_crypto.rs  interop.rs
rns-ctl/: Cargo.toml
rns-ctl/src/: api.rs  args.rs  auth.rs  bridge.rs  config.rs  encode.rs  format.rs  http.rs  lib.rs  main.rs  server.rs  sha1.rs  state.rs  tls.rs  ws.rs
rns-ctl/src/cmd/: daemon.rs  hook.rs  http.rs  id.rs  mod.rs  path.rs  probe.rs  status.rs
rns-ctl/tests/: integration.rs
rns-esp32/: Cargo.toml  sdkconfig.defaults
rns-esp32/.cargo/: config.toml
rns-esp32/src/: button.rs  config.rs  display.rs  driver.rs  ifac.rs  lora.rs  main.rs  rng.rs  rnode.rs
rns-hooks/: Cargo.toml  build-examples.sh
rns-hooks/benches/: hook_dispatch.rs
rns-hooks/examples/allowlist/: Cargo.toml
rns-hooks/examples/allowlist/src/: lib.rs
rns-hooks/examples/announce_dedup/: Cargo.toml
rns-hooks/examples/announce_dedup/src/: lib.rs
rns-hooks/examples/announce_filter/: Cargo.toml
rns-hooks/examples/announce_filter/src/: lib.rs
rns-hooks/examples/link_guard/: Cargo.toml
rns-hooks/examples/link_guard/src/: lib.rs
rns-hooks/examples/metrics/: Cargo.toml
rns-hooks/examples/metrics/src/: lib.rs
rns-hooks/examples/packet_logger/: Cargo.toml
rns-hooks/examples/packet_logger/src/: lib.rs
rns-hooks/examples/packet_mirror/: Cargo.toml
rns-hooks/examples/packet_mirror/src/: lib.rs
rns-hooks/examples/path_modifier/: Cargo.toml
rns-hooks/examples/path_modifier/src/: lib.rs
rns-hooks/examples/rate_limiter/: Cargo.toml
rns-hooks/examples/rate_limiter/src/: lib.rs
rns-hooks/sdk/rns-hooks-abi/: Cargo.toml
rns-hooks/sdk/rns-hooks-abi/src/: context.rs  lib.rs  result.rs  wire.rs
rns-hooks/sdk/rns-hooks-sdk/: Cargo.toml  build.rs
rns-hooks/sdk/rns-hooks-sdk/src/: action.rs  context.rs  host.rs  lib.rs  result.rs
rns-hooks/src/: arena.rs  context.rs  engine_access.rs  error.rs  hooks.rs  host_fns.rs  lib.rs  manager.rs  program.rs  result.rs  runtime.rs  wire.rs
rns-hooks/tests/: integration.rs
rns-net/: Cargo.toml
rns-net/examples/: echo.rs  message.rs  rnode_lora.rs  rnsd.rs  tcp_connect.rs
rns-net/src/: announce_cache.rs  compressor.rs  config.rs  destination.rs  discovery.rs  driver.rs  event.rs  hdlc.rs  kiss.rs  lib.rs  link_manager.rs  management.rs  md5.rs  node.rs  pickle.rs  rnode_kiss.rs  rpc.rs  serial.rs  shared_client.rs  storage.rs  time.rs
rns-net/src/common/: callbacks.rs  config.rs  destination.rs  discovery.rs  event.rs  interface_stats.rs  link_manager.rs  management.rs  mod.rs
rns-net/src/holepunch/: mod.rs  orchestrator.rs  probe.rs  puncher.rs  udp_direct.rs
rns-net/src/interface/: auto.rs  backbone.rs  kiss_iface.rs  local.rs  mod.rs  pipe.rs  rnode.rs  serial_iface.rs  tcp.rs  tcp_server.rs  udp.rs
rns-net/src/interface/i2p/: mod.rs  sam.rs
rns-net/tests/: e2e.rs  e2e_hooks.rs  ifac_interop.rs  python_interop.rs
tests/: generate_vectors.py
tests/docker/: Dockerfile  run-all.sh  run.sh
tests/docker/lib/: helpers.sh  summary.sh  topology.sh
tests/docker/nat-punch/: docker-compose.yml  run.sh  test.sh
tests/docker/nat-punch/configs/facilitator/: config
tests/docker/nat-punch/configs/node-b/: config
tests/docker/suites/: 01_health.sh  02_announce_direct.sh  03_announce_multihop.sh  04_packet_delivery.sh  05_proof_receipt.sh  06_bidirectional.sh  07_identity_recall.sh  08_path_table.sh  09_convergence.sh  10_scale.sh  11_star_announce.sh  12_mesh_routing.sh  13_link_lifecycle.sh  14_channel_messaging.sh  15_resource_transfer.sh  16_multihop_link.sh  17_concurrent_links.sh  18_node_restart.sh  19_burst_packets.sh
tests/docker/topologies/: chain.sh  mesh.sh  star.sh
tests/fixtures/crypto/: aes128_vectors.json  aes256_vectors.json  ed25519_vectors.json  hkdf_vectors.json  hmac_vectors.json  identity_vectors.json  pkcs7_vectors.json  sha256_vectors.json  sha512_vectors.json  token_vectors.json  x25519_vectors.json
tests/fixtures/ifac/: ifac_vectors.json
tests/fixtures/link/: channel_envelope_vectors.json  link_crypto_vectors.json  link_handshake_vectors.json  link_identify_vectors.json  stream_data_vectors.json
tests/fixtures/protocol/: announce_vectors.json  destination_vectors.json  flags_vectors.json  hash_vectors.json  packet_vectors.json  proof_vectors.json
tests/fixtures/resource/: advertisement_vectors.json  hmu_vectors.json  msgpack_vectors.json  part_hash_vectors.json  resource_proof_vectors.json
tests/fixtures/transport/: announce_retransmit_vectors.json  full_pipeline_vectors.json  pathfinder_vectors.json  transport_routing_vectors.json
