[workspace]
members = ["rns-crypto", "rns-core", "rns-net", "rns-cli"]
resolver = "2"

# Compile crypto crate with optimizations even in debug/test builds.
# The pure-Rust Ed25519 bigint math is ~100x slower without this.
[profile.dev.package.rns-crypto]
opt-level = 2

[profile.test.package.rns-crypto]
opt-level = 2
