[workspace]
members = ["rns-crypto", "rns-core", "rns-net", "rns-cli", "rns-ctl"]
resolver = "2"

# Compile crypto crate with optimizations even in debug/test builds.
# Helps curve25519-dalek performance in debug mode.
[profile.dev.package.rns-crypto]
opt-level = 2

[profile.test.package.rns-crypto]
opt-level = 2
