[package]
name = "rns-crypto"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

[dev-dependencies]
serde_json = "1"
