[package]
name = "rns-crypto"
description = "Cryptographic primitives for the Reticulum Network Stack"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

[dev-dependencies]
serde_json = "1"
