[package]
name = "rns-ctl"
version = "0.1.0"
edition = "2021"

[features]
default = []
tls = ["rustls", "rustls-pemfile"]

[dependencies]
rns-net = { path = "../rns-net" }
rns-core = { path = "../rns-core" }
rns-crypto = { path = "../rns-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
