[package]
name = "rns-ctl"
description = "HTTP/WebSocket control server for the Reticulum Network Stack"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
tls = ["rustls", "rustls-pemfile"]

[dependencies]
rns-net.workspace = true
rns-core.workspace = true
rns-crypto.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
