[package]
name = "rns-net"
version = "0.1.0"
edition = "2021"

[dependencies]
rns-core = { path = "../rns-core" }
rns-crypto = { path = "../rns-crypto" }
log = "0.4"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
env_logger = "0.11"
serde_json = "1"
ctrlc = "3"
tempfile = "3"

[[example]]
name = "tcp_connect"

[[example]]
name = "rnsd"
