[package]
name = "rns-net"
description = "Network interfaces and node driver for the Reticulum Network Stack"
version = "0.2.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rns-core.workspace = true
rns-crypto.workspace = true
log = "0.4"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
env_logger = "0.11"
serde_json = "1"
ctrlc = "3"
tempfile = "3"

[[example]]
name = "tcp_connect"

[[example]]
name = "rnsd"
